--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
           <div class="menu-block-wrapper">
             <div class="menu-overlay"></div>
             <nav class="menu-block" id="append-menu-header">
-              <div class="mobile-menu-head">
+              <div class="integrator-mobile-menu-head mobile-menu-head">
                 <a href="index.html">
                   <img class="logo-light brand-logo-width" src="{% static '/image/brand-logo/Logo-dark.png' %} "
                     alt="brand logo">
