fix: add header, footer, cta responsive

--- a/bitrixsite/static/css/integrator.css
+++ b/bitrixsite/static/css/integrator.css
@@ -234,6 +234,10 @@
 }
 
 @media screen and (max-width: 1200px) {
+    .integrator-header-cta-btn-wrapper {
+        display: none !important;
+    }
+
     .integrator-footer-main {
         flex-direction: column;
     }
